# lyralink

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE  README.org  rustfmt.toml
.github/workflows/: ci.yaml
.sqlx/: query-1711f8617ec9ff1abb95ca44620b8da58496f1419a4227e14e64a5bc42814ffe.json  query-3065a317889328a2e8fc41ac6ce0a17cff71b7866a3221bcd955d84915dc307b.json  query-3d7cb574a1ab9de13dc79ebad28c7fa55f00ea7cd81163d46ead8fddc3a05469.json  query-4f938c8e4faa349f7b761f3cdf7a35440bcf88f91248c4f3e88c9bae606c956f.json  query-5efd5646f78b01d09e2212e0976070f82a8e10473a8f0ae4048e01a786e5d5d4.json  query-93fb404c9bb7a520edd240517e349f95c125cca4bde37b80d78b3d55fbba09bc.json  query-deba635cdd770d9eed68db3461f209446fb2f1b13b77c7569f25eecfd0dd3147.json
migrations/: 00000001_create_lyralink_schema.sql
resources/public/: gd.css
src/: app.rs  controllers.rs  handlers.rs  lib.rs  main.rs  utils.rs
templates/: 404.html  base.html  index.html  result-invalid.html  result.html
