[package]
name = "lyralink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["multipart"] }
askama = "0.12.0"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs", "compression-gzip"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "macros" ] }
rand = "0.8.5"

[profile.dev.package.askama_derive]
opt-level = 3

[profile.dev.package.sqlx-macros]
opt-level = 3