[package]
name = "lyralink"
version = "0.2.0"
edition = "2021"
authors = ["Andinus <andinus@nand.sh>"]
description = "lyralink is a simple URL shortening service"
repository = "https://github.com/andinus/lyralink"
license = "ISC"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["multipart"] }
askama = "0.12.0"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs", "compression-gzip"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
rand = "0.8.5"
clap = { version = "4.4.11", features = ["derive"] }
chrono = "0.4.31"

[profile.dev.package.askama_derive]
opt-level = 3

[profile.dev.package.sqlx-macros]
opt-level = 3
